--- a/public/css/application.css
+++ b/public/css/application.css
@@ -56,3 +56,52 @@
   left: 320px;
 }
 
+.winningCombination {
+  position: absolute;
+}
+
+.winningCombination-0 {
+  top: 55px;
+  left: 0px;
+}
+
+.winningCombination-1 {
+  top: 202px;
+  left: 0px;
+}
+
+.winningCombination-2 {
+  top: 355px;
+  left: 0px;
+}
+
+.winningCombination-3 {
+  top: 205px;
+  left: -155px;
+  transform: rotate(270deg);
+}
+
+.winningCombination-4 {
+  top: 205px;
+  left: 0px;
+  transform: rotate(270deg);
+}
+
+.winningCombination-5 {
+  top: 205px;
+  left: 155px;
+  transform: rotate(270deg);
+}
+
+.winningCombination-6 {
+  top: 215px;
+  left: 10px;
+  transform: rotate(225deg);
+}
+
+.winningCombination-7 {
+  top: 210px;
+  left: 0px;
+  transform: rotate(315deg);
+}
+
