--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,17 +1,39 @@
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 @font-face {
- font-family: 'levibrush';
- src: url('/fonts/levibrush.ttf') format('truetype');
+  font-family: "levibrush";
+  src: url("/fonts/levibrush.ttf") format("truetype");
+}
+
+#content {
+  padding-bottom: 150px;
+}
+
+.ticTacToe {
 }
 
 .ticTacToe h1 {
-  font-family: 'levibrush';
+  text-align: center;
+  font-family: "levibrush";
   font-size: 90px;
-  margin-top: 100px;
   margin-bottom: 80px;
   text-transform: uppercase;
 }
 
 .ticTacToe .grid {
+  width: 442px;
+  margin-left: auto;
+  margin-right: auto;
   position: relative;
 }
 
