--- a/public/projects/react-tictactoe/css/application.css
+++ b/public/projects/react-tictactoe/css/application.css
@@ -8,6 +8,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  -webkit-justify-content: center;
+
+  align-items: center;
 }
 
 @font-face {
@@ -16,7 +19,6 @@ body {
 }
 
 #content {
-  padding-bottom: 150px;
 }
 
 .ticTacToe {
@@ -26,7 +28,7 @@ body {
   text-align: center;
   font-family: "levibrush";
   font-size: 90px;
-  margin-bottom: 80px;
+  padding-bottom: 50px;
   text-transform: uppercase;
 }
 
